[tool.poetry]
name = "alphabet-game-plays-api"
version = "0.1.0"
description = ""
authors = ["Greg Finley <gregory.finley@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.1"
google-cloud-bigquery = "^3.3.6"
functions-framework = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
